--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg-t4">시간은 기다려주지않는다.</p>
     <div class="row flex-row wrap">
-        <div class="bucket img4-t4 center done-t4">웹&페이퍼<br>포트폴리오 수정</div>
-        <div class="bucket img3-t4 center">3월 내에<br>만족스러운 회사 취직하기</div>
+        <div class="bucket img4-t4 center">웹&페이퍼<br>포트폴리오 수정</div>
+        <div class="bucket img3-t4 center done">3월 내에<br>만족스러운 회사 취직하기</div>
         <div class="bucket img2-t4 center">엄마 모시고 일본여행가기</div>
         <div class="bucket img2-t4 center">jlpt<br>2급이상 따기</div>
         <div class="bucket img3-t4 center">5kg이상<br>감량하기</div>
